--- a/About.css
+++ b/About.css
@@ -1,6 +1,10 @@
+/*This css and the Portfolio.css are the same.
+ I considered merging them together, but i left them separate just incase i wanted to do something unique with each page.
+ I don't think there is much to explain here to be honost.*/
+
 section {
-  height:425px;
-  border-bottom: 1px solid black;
+  height: 450px;
+  border-bottom: 1px black solid;
 }
 
 div {
@@ -13,20 +17,26 @@ div {
 }
 
 h1 {
-    text-align: center;
-    font-size: 45px;
-    border-bottom: black solid 1px;
+  text-align: center;
+  font-style: italic;
+  font-size: 45px;
+  border-bottom: black solid 1px;
 }
 
 h2 {
   text-align: center;
   font-size: 30px;
 }
+
 img {
   margin-left: 349px;
   margin-right: 349px;
   border: solid black 1px;
+  height: 200px;
 }
+
 p {
   font-size: 22px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
