--- a/style.css
+++ b/style.css
@@ -230,3 +230,34 @@ button {
   width: 100px;
   font-size: 20px;
 }
+
+.submitsuccess {
+  display: flex;
+  width: 900px;
+  min-height: 85.4vh;
+  margin: auto;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-left: solid white 1px;
+  border-right: solid white 1px;
+  justify-content: center;
+  align-items: center;
+}
+
+.submitsuccess section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: none;
+}
+
+.submitsuccess section p {
+  margin: 10px;
+}
+
+.submitsuccess section :nth-child(2) {
+  opacity: 0.7;
+}
+
+
+
