--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ header {
   position: sticky;
   top: 0;
   border-bottom: solid 1px rgb(255, 255, 255);
+  z-index: 101;
 }
 
 /* The "position: sticky;" + "bottom: 0;" lines is what makes the footer persistent. */
@@ -27,6 +28,7 @@ footer {
   background-color: #8b8b8b;
   height: 50px;
   border-top: 1px solid black;
+  z-index: 101;
 }
 
 div > section {
