--- a/style.css
+++ b/style.css
@@ -261,5 +261,13 @@ button {
   opacity: 0.7;
 }
 
-
+@media  (max-width: 920px){
+  .form-parent {
+    width: 100%;
+  }
+  
+  form {
+    width: 400px;
+  }
+}
 
