--- a/style.css
+++ b/style.css
@@ -261,13 +261,18 @@ button {
   opacity: 0.7;
 }
 
-@media  (max-width: 920px){
+@media (max-width: 920px) {
   .form-parent {
     width: 100%;
   }
-  
+
   form {
     width: 400px;
   }
 }
 
+@media (max-height: 650px) {
+  form {
+    scale: 0.85;
+  }
+}
